update book to Memory-mapped Register

--- a/documents/book/2.开始.md
+++ b/documents/book/2.开始.md
@@ -201,15 +201,80 @@ Hello, world!
 
 # 内存映射寄存器
 
-嵌入式操作系统到目前为止只能通过正常的Rust代码和在RAM中移动数据得到。如果我们想获取任何进入或输出我们的系统的信息（例如让LED闪烁，检测按键按下或者在某种总线上和片外外设通讯），我们不得不进入外围设备的世界和他们的 “内存映射寄存器”
+嵌入式操作系统到目前为止只能通过正常的Rust代码和在RAM中移动数据来实现。如果我们想获取任何进入或输出我们的系统的信息（例如让LED闪烁，检测按键按下或者在某种总线上和片外外设通讯），我们得进入外围设备和它们的 “内存映射寄存器”的世界
 
 
 
-你会发现，需要去访问微控制器上外设的代码已经写好了，都在下面几个层次之中
+你可能会发现，需要去访问微控制器上外设的代码已经写好了，都在下面几个层次之中
 
 ![](https://docs.rust-embedded.org/book/assets/crates.png)
 
--   Mirco-architeture Crate - 这种 crate 处理任何微控制器所使用的处理器核心的通用历程，以及任何使用这种处理器核心类型的微控制器的所有通用的外设。例如，`cortex-m crate` 提供函数去使能或者禁用中断，对于所有基于`Cortex-M`的微控制器都是一样的。它还可以访问所有基于`Cotex-M`的微控制器的 'SysTick' 外设。
+-   Mirco-architeture Crate - 这种 crate 处理任何微控制器所使用的处理器核心的通用历程，以及任何使用这种处理器核心类型的微控制器的所有通用的外设。例如，[cortex-m crate](https://crates.io/crates/cortex-m) 提供函数去使能或者禁用中断，对于所有基于`Cortex-M`的微控制器都是一样的。它还可以访问所有基于`Cotex-M`的微控制器的 'SysTick' 外设。
 -   Peripheral Access Crate (PAC) - 这种 crate 是各种定义了你正在使用的特定型号的微控制器的内存包装器的轻微包装。例如，tm4c123x 用于德州仪器 Tiva-C TM4C123系列，或者 stm32f30x 用于意法半导体的 STM32F30x 系列。可以直接与寄存器进行交互，遵循微控制器参考手册中给出的每种外设的操作说明。
--   HAL Crate - 这些 crate 提供对使用者更友好的 API 对于特定处理器，一般是通过实现一些在 embedded-hal 定义的通用的 traits。例如，此 crate 可能会提供一个 带有构造函数的`Serial`结构体，构造函数接受 GPIO 引脚合适的设置和波特率，还提供一些 `write_byte`函数用于发送数据。有关 embedded-hal 的更多信息，详见“可移植性”一章。
+-   HAL Crate - 这些 crate 提供对使用者更友好的 API 对于特定处理器，一般是通过实现一些在 [embedded-hal](https://crates.io/crates/embedded-hal) 定义的通用的 traits。例如，此 crate 可能会提供一个 带有构造函数的`Serial`结构体，构造函数接受 GPIO 引脚合适的设置和波特率，还提供一些 `write_byte`函数用于发送数据。有关 [embedded-hal](https://crates.io/crates/embedded-hal) 的更多信息，详见“可移植性”一章。
 -   Board Crate - 这些 crate 比 HAL Crate 多做了一步，通过预配置不同外设和GPIO引脚以适应特定的开发者套件或你正在使用的开发板，例如用于 STM32F3DISCOVERY开发板的 stm32f3-discovery。
+
+## Board Crate
+
+如果你刚刚接触嵌入式Rust，Board Crate 是最好的起点。它们很好地抽象那些当你刚开始学习这个方向时遇到的一些让你不知所措的硬件细节，还有让一些标准化的任务变得简单，例如开或者关一个LED灯。它们提供的功能对于不同的开发板会很不一样。因为这本书目的在于保持硬件的不可知，所以这本书不会涉及到 Board Crate 的内容。
+
+如果你想在`STM32F3DISCOVERY`上面做实验，强烈推荐去看一下 [stm32f3-discovery board crate](https://crates.io/crates/stm32f3-discovery)，它提供了led闪烁，指南针访问，蓝牙和等功能。[Discovery](https://rust-embedded.github.io/discovery/)一书提供了很好的引导关于使用 board crate。
+
+## Mirco-architecture Crate
+让我们来看看所有基于`Cortex-M`的微控制器都有的 SysTick 外设。我们可以在[cortex-m crate](https://crates.io/crates/cortex-m) 找到大量底层的 API，可以像这样使用它：
+```rust
+#![no_std]
+#![no_main]
+use cortex_m::peripheral::{syst, Peripherals};
+use cortex_m_rt::entry;
+use panic_halt as _;
+
+#[entry]
+fn main() -> ! {
+    let peripherals = Peripherals::take().unwrap();
+    let mut systick = peripherals.SYST;
+    systick.set_clock_source(syst::SystClkSource::Core);
+    systick.set_reload(1_000);
+    systick.clear_current();
+    systick.enable_counter();
+    while !systick.has_wrapped() {
+        // Loop
+    }
+
+    loop {}
+}
+```
+`SYST`结构上的函数相当接近此外设在ARM技术参考手册定义的功能，这里没有关于"X微秒延时"API，我们得用 `whle` 循环粗略地实现它。请注意，我们不能在调用`Peripherals::take()`之前访问`SYST`结构体，这是一个特殊的例程，保证整个项目只会有一个`SYST`结构体。查阅`Peripherals`一节了解更多
+
+## 使用 Peripheral Access Crate (PAC)
+如果我们把自身局限在每个`Cortex-M`所包含的基础外设，我们在嵌入式软件发展上不会走得很远。在某些情况下，我们需要针对特定的微控制器写一些代码。在这个示例中，假设我们有一块德州仪器的 TM4C123 芯片-一块带有256KiB Flash的中等80MHz Cortex-M4芯片。我们可以pull [tm4c123x crate](https://crates.io/crates/tm4c123x) 去使用这个芯片
+```rust
+#![no_std]
+#![no_main]
+
+use panic_halt as _; // panic handler
+
+use cortex_m_rt::entry;
+use tm4c123x;
+
+#[entry]
+pub fn init() -> (Delay, Leds) {
+    let cp = cortex_m::Peripherals::take().unwrap();
+    let p = tm4c123x::Peripherals::take().unwrap();
+
+    let pwm = p.PWM0;
+    pwm.ctl.write(|w| w.globalsync0().clear_bit());
+    // Mode = 1 => Count up/down mode
+    pwm._2_ctl.write(|w| w.enable().set_bit().mode().set_bit());
+    pwm._2_gena.write(|w| w.actcmpau().zero().actcmpad().one());
+    // 528 cycles (264 up and down) = 4 loops per video line (2112 cycles)
+    pwm._2_load.write(|w| unsafe { w.load().bits(263) });
+    pwm._2_cmpa.write(|w| unsafe { w.compa().bits(64) });
+    pwm.enable.write(|w| w.pwm4en().set_bit());
+}
+```
+ 
+我们访问`PWM0`外设跟前面访问`SYST`外设完全一样，除了我们调用的是`tm4c123x::Peripherals::take()`。因为这个crate是使用[svd2rust](https://crates.io/crates/svd2rust)自动生成的，寄存器字段的访问采用的是闭包而不是数字参数。虽然这看起来很多代码，Rust 编译器能够李彤它帮我们执行一大堆检查，然后生成接近手写汇编的机器代码！当然，自动生成的代码不能确定特定访问器函数所有可能的参数是否合法（例如，SVD将寄存器定义为32位却不说明某些32为的值有特殊含义），然后该函数被标记为不安全。在上面的例子中看到，当我们设置`load`和`compa`子字段时使用了`bits()`函数。
+
+## 读
+`read()`函数返回一个提供寄存器中各种子字段的只读访问对象，这是根据芯片制造商的SVD文件来定义的。
