update book to memory-map registers

--- a/documents/book/2.开始.md
+++ b/documents/book/2.开始.md
@@ -277,4 +277,12 @@ pub fn init() -> (Delay, Leds) {
 我们访问`PWM0`外设跟前面访问`SYST`外设完全一样，除了我们调用的是`tm4c123x::Peripherals::take()`。因为这个crate是使用[svd2rust](https://crates.io/crates/svd2rust)自动生成的，寄存器字段的访问采用的是闭包而不是数字参数。虽然这看起来很多代码，Rust 编译器能够李彤它帮我们执行一大堆检查，然后生成接近手写汇编的机器代码！当然，自动生成的代码不能确定特定访问器函数所有可能的参数是否合法（例如，SVD将寄存器定义为32位却不说明某些32为的值有特殊含义），然后该函数被标记为不安全。在上面的例子中看到，当我们设置`load`和`compa`子字段时使用了`bits()`函数。
 
 ## 读
-`read()`函数返回一个提供寄存器中各种子字段的只读访问对象，这是根据芯片制造商的SVD文件来定义的。
+`read()`函数返回一个对象，该对象对寄存器中各个子字段进行只读访问，这是根据芯片制造商的SVD文件来定义的。您可以在[TM4C123X 文档](https://docs.rs/tm4c123x/0.7.0/tm4c123x/pwm0/ctl/struct.R.html)中找到在这个特定的芯片和外设上，这个特定寄存器的特殊R返回类型上的所有函数。 
+```rust
+if pwm.ctl.read().globalsync0().is_set() {
+    // Do a thing
+}
+```
+
+## 写
+`write()`函数
