complete Memory-mapped Rigsters

--- a/documents/book/2.开始.md
+++ b/documents/book/2.开始.md
@@ -76,7 +76,7 @@ fn main() -> ! {
 }
 ```
 
-现在，可以使用`cargo build`交叉编译这个程序然后就像以前那样使用`cargo-binutils`检查二进制文件。`cortex-m-rt`crate处理所有让芯片的运行起来要求，有帮助的是，几乎所有`Cortex-M`的芯片都是以这种方式启动的
+>   z现在，可以使用`cargo build`交叉编译这个程序然后就像以前那样使用`cargo-binutils`检查二进制文件。`cortex-m-rt`crate处理所有让芯片的运行起来要求，有帮助的是，几乎所有`Cortex-M`的芯片都是以这种方式启动的
 
 ## 调试
 
@@ -273,16 +273,108 @@ pub fn init() -> (Delay, Leds) {
     pwm.enable.write(|w| w.pwm4en().set_bit());
 }
 ```
- 
+
 我们访问`PWM0`外设跟前面访问`SYST`外设完全一样，除了我们调用的是`tm4c123x::Peripherals::take()`。因为这个crate是使用[svd2rust](https://crates.io/crates/svd2rust)自动生成的，寄存器字段的访问采用的是闭包而不是数字参数。虽然这看起来很多代码，Rust 编译器能够李彤它帮我们执行一大堆检查，然后生成接近手写汇编的机器代码！当然，自动生成的代码不能确定特定访问器函数所有可能的参数是否合法（例如，SVD将寄存器定义为32位却不说明某些32为的值有特殊含义），然后该函数被标记为不安全。在上面的例子中看到，当我们设置`load`和`compa`子字段时使用了`bits()`函数。
 
-## 读
-`read()`函数返回一个对象，该对象对寄存器中各个子字段进行只读访问，这是根据芯片制造商的SVD文件来定义的。您可以在[TM4C123X 文档](https://docs.rs/tm4c123x/0.7.0/tm4c123x/pwm0/ctl/struct.R.html)中找到在这个特定的芯片和外设上，这个特定寄存器的特殊R返回类型上的所有函数。 
+## 读取
+`read()`函数返回一个对象，该对象对寄存器中各个子字段进行只读访问，这是根据芯片制造商的SVD文件来定义的。您可以在[TM4C123X 文档](https://docs.rs/tm4c123x/0.7.0/tm4c123x/pwm0/ctl/struct.R.html)中找到在这个特定的芯片和外设上，这个特定寄存器的特殊`R`返回类型上的所有可用的函数。 
+
 ```rust
 if pwm.ctl.read().globalsync0().is_set() {
     // Do a thing
 }
 ```
 
-## 写
-`write()`函数
+## 写入
+`write()`函数接受一个带单一参数的闭包，通常称为`w`。然后根据制造商该芯片的SVD文件，此参数可对该寄存器内的各个子字段进行读写访问。同样的，您可以在[TM4C123X 文档](https://docs.rs/tm4c123x/0.7.0/tm4c123x/pwm0/ctl/struct.R.html)中找到在这个特定的芯片和外设上，这个特定寄存器的`W`上的所有可用的函数。注意，所有没有被设置的子字段会被设置为一个默认值 —— 寄存器中任何存在的内容都会丢失。
+
+```rust
+pwm.ctl.write(|w| w.globalsync0().clear_bit());
+```
+
+## 修改
+
+如果希望只改变这个寄存器中的一个特定的子字段同时保持其他子字段不变，我们可以使用修改`modify`函数。这个函数接受一个带有两个参数的闭包 —— 一个为了读一个为了写。通常我们分别称它们为`r`和`w`。`r`参数可以用来检查当前寄存器的内容，`w`参数可以用来修改寄存器的内容
+
+```rust
+pwm.ctl.modify(|r, w| w.globalsync0().clear_bit());
+```
+
+`modify`函数在这里展示了闭包的强大。在C语言，我们必须把数据读到一些临时的值，修改正确的位然后把值写回去。这意味着有很大的出错空间。
+
+```c
+uint32_t temp = pwm0.ctl.read();
+temp |= PWM0_CTL_GLOBALSYNC0;
+pwm0.ctl.write(temp);
+uint32_t temp2 = pwm0.enable.read();
+temp2 |= PWM0_ENABLE_PWM4EN;
+pwm0.enable.write(temp); // Uh oh! Wrong variable!
+```
+
+## 使用HAL crate
+
+芯片的 HAL crate 通常通过实现 PAC 暴露出来的原始结构的自定义的 Trait 来工作。通常这个 Trait 会为单一外设定义一个叫做`constrain()`的函数，或者为像多个引脚的GPIO口的定义叫`spilit()`的函数。这个函数会消耗底层原始外设结构，然后返回一个新的带有更高级API的对象。这个API还可以做些事情，比如让串口`new`函数需要一个在某些`Clock`结构体上的借用，这只能通过调用配置PLLs和设置所有时钟频率的函数来生成。通过这种方式，就不可能在没有先配置时钟频率，或者在串口对象将波特率误转换为时钟滴答的前提下，静态地生成一个串口对象。有些 crate 甚至为每个GPIO引脚可以处在的状态定义了 tarits，要求用户在传递引脚到外设钱将引脚设置到正确的状态。所有这些都没有运行时花费！
+
+让我们来看一个例子
+
+```rust
+#![no_std]
+#![no_main]
+extern crate panic_halt; // panic handler
+use cortex_m_rt::entry;
+use tm4c123x_hal as hal;
+use tm4c123x_hal::prelude::*;
+use tm4c123x_hal::serial::{NewlineMode, Serial};
+use tm4c123x_hal::sysctl;
+#[entry]
+fn main() -> ! {
+    let p = hal::Peripherals::take().unwrap();
+    let cp = hal::CorePeripherals::take().unwrap();
+    // Wrap up the SYSCTL struct into an object with a higher-layer API
+    let mut sc = p.SYSCTL.constrain();
+    // Pick our oscillation settings
+    sc.clock_setup.oscillator = sysctl::Oscillator::Main(
+        sysctl::CrystalFrequency::_16mhz,
+        sysctl::SystemClock::UsePll(sysctl::PllOutputFrequency::_80_00mhz),
+    );
+    // Configure the PLL with those settings
+    let clocks = sc.clock_setup.freeze();
+    // Wrap up the GPIO_PORTA struct into an object with a higher-layer API.
+    // Note it needs to borrow `sc.power_control` so it can power up the GPIO
+    // peripheral automatically.
+    let mut porta = p.GPIO_PORTA.split(&sc.power_control);
+    // Activate the UART.
+    let uart = Serial::uart0(
+        p.UART0,
+        // The transmit pin
+        porta
+            .pa1
+            .into_af_push_pull::<hal::gpio::AF1>(&mut porta.control),
+        // The receive pin
+        porta
+            .pa0
+            .into_af_push_pull::<hal::gpio::AF1>(&mut porta.control),
+        // No RTS or CTS required
+        (),
+        (),
+        // The baud rate
+        115200_u32.bps(),
+        // Output handling
+        NewlineMode::SwapLFtoCRLF,
+        // We need the clock rates to calculate the baud rate divisors
+        &clocks,
+        // We need this to power up the UART peripheral
+        &sc.power_control,
+    );
+    loop {
+        writeln!(uart, "Hello, World!\r\n").unwrap();
+    }
+}
+```
+
+# 半主机
+
+
+
+
+
