--- a/documents/book/2.开始.md
+++ b/documents/book/2.开始.md
@@ -374,7 +374,112 @@ fn main() -> ! {
 
 # 半主机
 
+半主机是一种能让嵌入式设备在主机上执行IO操作的机制，主要用于将日志消息记录到主机控制台。半主机只需要一个调试窗口，几乎不需要其他东西（没有其他连接！）非常方便。但是缺点是它很慢：每个写操作需要几毫秒，这取决于您所使用的硬件调试器（例如ST-Link）。
+
+`cortex-m-semihosting`crate 提供在Cortex-M设备执行半主机操作的API。下面的代码就是半主机版本的“Hello, world!”：
+
+```rust
+#![no_main]
+#![no_std]
+extern crate panic_halt;
+use cortex_m_rt::entry;
+use cortex_m_semihosting::hprintln;
+#[entry]
+fn main() -> ! {
+    hprintln!("Hello, world!").unwrap();
+    loop {}
+}
+```
+
+如果您在硬件设备上运行这个代码，你会在OpenOCD的日志中看到“Hello, world!”消息。
+
+```bash
+$ openocd
+(..)
+Hello, world!
+(..)
+```
+
+您需要先从GDB启用在OpenOCD的半主机模式
+
+```bash
+(gdb) monitor arm semihosting enable
+semihosting is enabled
+```
+
+QEMU 能够理解半主机操作，所以上述代码同样可以在`qemu-system-arm`下工作，不需要开启一个调试窗口。要注意的是您需要传递`-semihosting-config`标志给QEMU来启用半主机支持；这个标志已经包含在模板的`.cargo/config`文件。
+
+```bash
+$ # this program will block the terminal
+$ cargo run
+     Running `qemu-system-arm (..)
+Hello, world!
+```
+
+这里也有`exit`半主机的操作，能用于终止QEMU进程。**重要提示**：不要在硬件设备上使用`debug::exit`；这个函数会破坏你的OpenOCD会话，您将不能调试代码知道你重启它。
+
+```rust
+#![no_main]
+#![no_std]
+extern crate panic_halt;
+use cortex_m_rt::entry;
+use cortex_m_semihosting::debug;
+#[entry]
+fn main() -> ! {
+    let roses = "blue";
+    if roses == "red" {
+        debug::exit(debug::EXIT_SUCCESS);
+    } else {
+        debug::exit(debug::EXIT_FAILURE);
+    }
+    loop {}
+}
+```
+
+```bash
+$ cargo run
+     Running `qemu-system-arm (..)
+$ echo $?
+1
+```
+
+最后提示：您可以将恐慌行为设置为`exit(EXIT_FAILURE)`。这会使您在QEMU写的`no_std`通过运行测试。
+
+为了方便起见，`panic-semihosting`crate 有“exit”的功能，当启用该特性是，在将恐慌信息记录到主机标准错误后调用`exit(EXIT_FAILURE)`。
+
+```rust
+#![no_main]
+#![no_std]
+extern crate panic_semihosting; // features = ["exit"]
+use cortex_m_rt::entry;
+use cortex_m_semihosting::debug;
+#[entry]
+fn main() -> ! {
+    let roses = "blue";
+    assert_eq!(roses, "red");
+    loop {}
+}
+```
+
+```bash
+$ cargo run
+     Running `qemu-system-arm (..)
+panicked at 'assertion failed: `(left == right)`
+  left: `"blue"`,
+ right: `"red"`', examples/hello.rs:15:5
+$ echo $?
+1
+```
+
+**注意：**为了在`panic-semihosting`启用该特性，编辑您的`Cargo.toml`依赖关系`panic-semihosting`指定的部分：
+
+```rust
+panic-semihosting = { version = "VERSION", features = ["exit"] }
+```
+
+`VERSION`是您想要的版本。获取更多依赖特性的信息，查阅Cargo book中 [specifying dependencies](https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html) 部分。
 
 
 
+# 恐慌
 
